## Makefile.am for data/apps
SUBDIRS			=	icons
miscdatadir 	=	$(ILIXI_DATADIR)/apps

miscdata_DATA 	=	clanbomber.appdef \
					dashboard.appdef \
					dfbterm.appdef \
					fire.appdef \
					gallery.appdef \
					ilixi_home.appdef \
					ilixi_monitor.appdef \
					ilixi_widgets.appdef \
					knuckles.appdef \
					lite_web.appdef \
					matrix.appdef \
					navit.appdef \
					neo.appdef \
					osk.appdef \
					particle.appdef \
					penguins.appdef \
					soundmixer.appdef \
					statusbar.appdef \
					texture.appdef \
					windows.appdef
					
EXTRA_DIST 		= 	$(miscdata_DATA)
