## Makefile.am for data/apps
SUBDIRS			=	icons
miscdatadir 	=	$(ILIXI_DATADIR)/apps

miscdata_DATA 	=	bbc.appdef \
					clanbomber.appdef \
					dashboard.appdef \
					dfbterm.appdef \
					facebook.appdef \
					fire.appdef \
					gallery.appdef \
					google.appdef \
					googlemaps.appdef \
					googleplus.appdef \
					ilixi_home.appdef \
					ilixi_monitor.appdef \
					ilixi_widgets.appdef \
					knuckles.appdef \
					lite_web.appdef \
					matrix.appdef \
					navit.appdef \
					neo.appdef \
					osk.appdef \
					particle.appdef \
					penguins.appdef \
					soundmixer.appdef \
					statusbar.appdef \
					texture.appdef \
					twitter.appdef \
					windows.appdef \
					youtube.appdef
					
EXTRA_DIST 		= 	$(miscdata_DATA)
