## Makefile.am for data/apps
SUBDIRS			=	icons
miscdatadir 	=	$(ILIXI_DATADIR)/apps

miscdata_DATA 	=	\
					8tracks.appdef \
					bbc.appdef \
					clanbomber.appdef \
					dfbterm.appdef \
					facebook.appdef \
					fire.appdef \
					gears.appdef \
					google.appdef \
					googlemaps.appdef \
					googleplus.appdef \
					ilixi_animations.appdef \
					ilixi_animatedtiles.appdef \
					ilixi_calc.appdef \
					ilixi_gallery.appdef \
					ilixi_monitor.appdef \
					ilixi_player.appdef \
					ilixi_settings.appdef \
					ilixi_WebKit.appdef \
					ilixi_widgets.appdef \
					knuckles.appdef \
					lite_web.appdef \
					matrix.appdef \
					neo.appdef \
					particle.appdef \
					penguins.appdef \
					soundmixer.appdef \
					texture.appdef \
					twitter.appdef \
					windows.appdef \
					youtube.appdef \
					qt_animatedtiles.appdef \
					qt_textedit.appdef
					
EXTRA_DIST 		= 	$(miscdata_DATA)
