## Makefile.am for data/images
miscdatadir 	=	$(ILIXI_DATADIR)/images
miscdata_DATA 	=	default.png \
         			ilixi_bg.jpg \
         			noImage.png \
        			pointer.png \
        			grid.png \
        			backspace.png \
        			cancel.png \
        			caps.png \
        			fullscreen.png \
        			left_arrow.png \
        			ok.png \
        			pause.png \
        			play.png \
        			return.png \
        			rewind.png \
        			right_arrow.png \
        			space.png \
        			ui-icons.png
        			
EXTRA_DIST 	= 	$(miscdata_DATA)
