## Makefile.am for data/images
miscdatadir 	=	$(ILIXI_DATADIR)/images
miscdata_DATA 	=	backspace.png \
                    cancel.png \
                    caps.png \
                    close.png \
                    default.png \
                    fullscreen.png \
                    grid.png \
                    ilixi_bg.jpg \
                    left_arrow.png \
                    noImage.png \
                    notify.png \
                    ok.png \
                    pause.png \
                    play.png \
                    pointer.png \
                    return.png \
                    rewind.png \
                    right_arrow.png \
                    space.png \
                    ui-icons.png
        			
EXTRA_DIST 	= 	$(miscdata_DATA)
