## Makefile.am for data/images
miscdatadir 	=	$(ILIXI_DATADIR)/images
miscdata_DATA 	=	close.png \
                    default.png \
                    grid.png \
                    ilixi_bg.jpg \
                    noImage.png \
                    notify.png \
                    pointer.png \
                    ui-icons.png
        			
EXTRA_DIST 	= 	$(miscdata_DATA)
